Fix spacing between sections

--- a/client/src/components/PlaylistPage/PlaylistPage.scss
+++ b/client/src/components/PlaylistPage/PlaylistPage.scss
@@ -46,6 +46,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin-top: 3vh;
     }
   }
 }
